# GOSTracker

./: CMakeLists.txt  LICENSE  README.md  使用说明.txt
cmake/: opencv_helper.cmake
data/: Thumbs.db  bunny.mtl  cube.mtl
freeglut300/: CMakeLists.txt
glad/: CMakeLists.txt
glad/src/: glad.c
glew-2.0.0/: CMakeLists.txt  glew.pc
src/: CameraCalibration.cpp  CameraCalibration.h  Config.h  Correspondence.cpp  Correspondence.h  Main.cpp  Model.cpp  Model.h  Optimizer.cpp  Optimizer.h  Param.h  PointSet.h  Render.cpp  Render.h  glm.cpp  glm.h  stdafx.cpp  stdafx.h
testbed/: CMakeLists.txt
testbed/freeglut300/: CMakeLists.txt
testbed/glad/include/glad/: glad.h
