cmake_minimum_required(VERSION 3.6)

project(GOSTracker)

# OpenCV
if(ANDROID OR IOS OR (MSVC AND ARCBUILD))
  set(opencv_prebuilt_url "https://git.arcsoft.com.cn/aisg/opencv-prebuilt/raw/master/opencv-prebuilt.cmake")
  set(opencv_prebuilt_cmake "${CMAKE_BINARY_DIR}/opencv-prebuilt.cmake")
  file(DOWNLOAD ${opencv_prebuilt_url} ${opencv_prebuilt_cmake} STATUS download_status)
  if(NOT download_status EQUAL 0)
    message(FATAL_ERROR "Fail to download ${opencv_prebuilt_url} (status: ${download_status})!")
  endif()
  unset(download_status)
  include(${opencv_prebuilt_cmake})
  #include(opencv-prebuilt.cmake)
else()
  find_package(OpenCV REQUIRED)
endif()
include("cmake/opencv_helper.cmake")

# add_subdirectory(glew-2.0.0)
# add_subdirectory(gl3w)
add_subdirectory(glad)
#find_package(OpenGL REQUIRED)
add_subdirectory(freeglut300)
add_subdirectory(3rdparty)

file(GLOB SRCS src/*)
add_executable(${PROJECT_NAME} ${SRCS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS} glad freeglut_static ${OPENGL_LIBRARIES} levmar)
target_include_directories(${PROJECT_NAME} PUBLIC src/.)

if(MSVC)
  set_target_properties(${PROJECT_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/data")
endif()